--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -6,6 +6,8 @@ on:
             - master
     schedule:
         - cron: '5 16 * * *'
+    workflow_dispatch:
+
 jobs:
     build:
         runs-on: ubuntu-latest
